# rackery

./: .gitattributes  .gitignore  AGENTS.md  README.md  err.txt  fix_lint.dart  nms_out.txt  ollama-linux-amd64.tar.zst  pubspec.yaml  tensors.txt  tensors_lite4.txt  test.dart  update_taxonomy.py
assets/: LICENSE_BIOCLIP.md  LICENSE_EMOJI.md  aiy_vision_classifier_birds_v1.tflite  bioclip_vision.onnx  bioclip_vision.onnx.data  bioclip_vision_int8.onnx  efficientdet_lite4.onnx  efficientdet_lite4.tflite  efficientdet_lite4_dynamic.onnx  species_labels.json  ssd_mobilenet_v2.tflite
assets/__MACOSX/: ._mobilenet_v1_1.0_224_quant.tflite
integration_test/: simple_test.dart
lib/: main.dart
lib/controllers/: checklist_controller.dart  export_actions.dart  manual_detection_actions.dart  observation_actions.dart  photo_processing_actions.dart  selection_actions.dart
linux/: CMakeLists.txt
macos/: Podfile
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: image_utils.rs  ingestion.rs  mod.rs  nms.rs  pipeline.rs  pool.rs  simple.rs
rust_builder/: pubspec.yaml
scripts/: check-license-header.sh
test/: check_tensor_test.dart  flutter_test_config.dart  nms_test.dart  test_detector.dart  test_detector2.dart  test_detector_heic.dart  test_detector_pure.dart  test_detector_raw.dart  test_exif.dart  test_geo.dart  test_ollama_crop.dart  test_ollama_reasoning.dart  test_ollama_reasoning2.dart  test_ollama_reasoning3.dart  test_parser.dart  widget_test.dart
tool/: export_bioclip_vision.py  generate_species_embeddings.py
windows/: CMakeLists.txt
(+72 files in other folders)
