[package]
name = "rust_lib_rackery"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
image = "0.25.10"
rayon = "1.11.0"
ort = { version = "2.0.0-rc.12", features = ["cuda"] }
serde_json = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

# Maximize optimization for dependencies and local code even during Flutter debug runs
[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
